--- a/omod/src/main/webapp/resources/htmlforms/ethnicity.html
+++ b/omod/src/main/webapp/resources/htmlforms/ethnicity.html
@@ -62,7 +62,8 @@
 			<uimessage code="coreapps.patientDashBoard.date" />
 		</label>
 		<span>
-			<encounterDate id="encounterDate" default="now" />
+			<!-- Mandatory showTime="true" to set encounter date and time -->
+			<encounterDate id="encounterDate" default="now" showTime="true"/>
 		</span>
 	</p>
 </div>
