--- a/omod/src/main/webapp/resources/htmlforms/diagnosis.html
+++ b/omod/src/main/webapp/resources/htmlforms/diagnosis.html
@@ -1,4 +1,4 @@
-<htmlform formUuid="90344e16-94ff-4ecf-b9c2-71930aab8c67" formName="Diagnosis" formEncounterType="3dbd13da-f210-4f20-a5b4-536a92e81474" formVersion="0.5.1"
+<htmlform formUuid="90344e16-94ff-4ecf-b9c2-71930aab8c67" formName="Diagnosis" formEncounterType="3dbd13da-f210-4f20-a5b4-536a92e81474" formVersion="0.6"
 	formAddMetadata="yes"
 	formUILocation="patientDashboard.visitActions"
 	formOrder="11"
@@ -44,7 +44,30 @@
 
 	</script>
 </ifMode>
+<ifMode mode="enter">
 
+	
+	<uiInclude provider="lfhcforms" javascript="changeEncounterDate.js"/>
+	
+	<lookup complexExpression="
+	#set($alertMessage = $fn.message('lfhcforms.pastencounter.alert'))
+	#set($successMessage = $fn.message('lfhcforms.pastencounter.success'))
+
+	&lt;script type=&quot;text/javascript&quot;>
+	var alertMessage = '${alertMessage}';
+	var successMessage = '${successMessage}';
+	jQuery(document).ready(function(){
+	var visitEndDate = new Date('${visit.stopDatetime}');
+	if ( Object.prototype.toString.call(visitEndDate) === '[object Date]' ) {
+	if (!( isNaN( visitEndDate.getTime() ) )) {  
+	changeEncounterDate(visitEndDate);
+}
+}
+});
+&lt;/script>" />
+
+
+</ifMode>
 <div class="hidden" id="who-when-where">
 	<p id="who">
 		<label>
@@ -67,7 +90,8 @@
 			<uimessage code="coreapps.patientDashBoard.date" />
 		</label>
 		<span>
-			<encounterDate id="encounterDate" default="now" />
+			<!-- Mandatory showTime="true" to set encounter date and time -->
+			<encounterDate id="encounterDate" default="now" showTime="true"/>
 		</span>
 	</p>
 </div>
