--- a/omod/src/main/webapp/resources/htmlforms/lines-tubes.html
+++ b/omod/src/main/webapp/resources/htmlforms/lines-tubes.html
@@ -1,25 +1,41 @@
-<htmlform formUuid="592bddc7-9889-490b-b3fd-5795648b078a" formName="Lines and Tubes" formEncounterType="934aad8b-250d-450b-9cb3-ca5f01841f61" formVersion="0.5.7"
-	formAddMetadata="yes"
-	formUILocation="patientDashboard.visitActions"
-	formOrder="16"
-	formIcon="icon-medkit"
-	formShowIf=""
-	formDisplayStyle="Simple"
+<htmlform formUuid="592bddc7-9889-490b-b3fd-5795648b078a" formName="Lines and Tubes" formEncounterType="934aad8b-250d-450b-9cb3-ca5f01841f61" formVersion="0.6"
+formAddMetadata="yes"
+formUILocation="patientDashboard.visitActions"
+formOrder="16"
+formIcon="icon-medkit"
+formShowIf=""
+formDisplayStyle="Simple"
 >
 
 
 <ifMode mode="VIEW">
 	<script type="text/javascript" id="handleViewMode">
-
 		// JavaScript for VIEW mode
-
 		if(jQuery){
 			jQuery(document).ready(function(){
 				handleViewMode("592bddc7-9889-490b-b3fd-5795648b078a");
 			});
 		}
 	</script>
+</ifMode>
 
+<ifMode mode="enter">
+	<uiInclude provider="lfhcforms" javascript="changeEncounterDate.js"/>
+	<lookup complexExpression="
+	#set($alertMessage = $fn.message('lfhcforms.pastencounter.alert'))
+	#set($successMessage = $fn.message('lfhcforms.pastencounter.success'))
+	&lt;script type=&quot;text/javascript&quot;>
+	var alertMessage = '${alertMessage}';
+	var successMessage = '${successMessage}';
+	jQuery(document).ready(function(){
+	var visitEndDate = new Date('${visit.stopDatetime}');
+	if ( Object.prototype.toString.call(visitEndDate) === '[object Date]' ) {
+	if (!( isNaN( visitEndDate.getTime() ) )) {  
+	changeEncounterDate(visitEndDate);
+}
+}
+});
+&lt;/script>" />
 </ifMode>
 
 <div class="hidden" id="who-when-where">
@@ -44,7 +60,8 @@
 			<uimessage code="coreapps.patientDashBoard.date" />
 		</label>
 		<span>
-			<encounterDate id="encounterDate" default="now" />
+			<!-- Mandatory showTime="true" to set encounter date and time -->
+			<encounterDate id="encounterDate" default="now" showTime="true"/>
 		</span>
 	</p>
 </div>
