--- a/omod/src/main/webapp/resources/htmlforms/nvobs.html
+++ b/omod/src/main/webapp/resources/htmlforms/nvobs.html
@@ -1,10 +1,10 @@
-<htmlform formUuid="d18289b0-d0a4-4753-a500-55767eb057de" formName="Neurovascular Obs" formEncounterType="4a4e04a0-1424-4fb1-bebb-ba6bb16dd628" formVersion="0.3.2"
+<htmlform formUuid="d18289b0-d0a4-4753-a500-55767eb057de" formName="Neurovascular Obs" formEncounterType="4a4e04a0-1424-4fb1-bebb-ba6bb16dd628" formVersion="0.6"
 formAddMetadata="yes"
-	formUILocation="patientDashboard.visitActions"
-	formOrder="17"
-	formIcon="icon-medkit"
-	formShowIf=""
-	formDisplayStyle="Simple"
+formUILocation="patientDashboard.visitActions"
+formOrder="17"
+formIcon="icon-medkit"
+formShowIf=""
+formDisplayStyle="Simple"
 >
 
 <ifMode mode="VIEW" include="false">
@@ -27,7 +27,25 @@ formAddMetadata="yes"
 			});
 		}
 	</script>
+</ifMode>
 
+<ifMode mode="enter">
+	<uiInclude provider="lfhcforms" javascript="changeEncounterDate.js"/>
+	<lookup complexExpression="
+	#set($alertMessage = $fn.message('lfhcforms.pastencounter.alert'))
+	#set($successMessage = $fn.message('lfhcforms.pastencounter.success'))
+	&lt;script type=&quot;text/javascript&quot;>
+	var alertMessage = '${alertMessage}';
+	var successMessage = '${successMessage}';
+	jQuery(document).ready(function(){
+	var visitEndDate = new Date('${visit.stopDatetime}');
+	if ( Object.prototype.toString.call(visitEndDate) === '[object Date]' ) {
+	if (!( isNaN( visitEndDate.getTime() ) )) {  
+	changeEncounterDate(visitEndDate);
+}
+}
+});
+&lt;/script>" />
 </ifMode>
 
 <div class="hidden" id="who-when-where">
@@ -52,7 +70,8 @@ formAddMetadata="yes"
 			<uimessage code="coreapps.patientDashBoard.date" />
 		</label>
 		<span>
-			<encounterDate id="encounterDate" default="now" />
+			<!-- Mandatory showTime="true" to set encounter date and time -->
+			<encounterDate id="encounterDate" default="now" showTime="true"/>
 		</span>
 	</p>
 </div>
