--- a/omod/src/main/webapp/resources/htmlforms/ipd-nurse.html
+++ b/omod/src/main/webapp/resources/htmlforms/ipd-nurse.html
@@ -122,6 +122,13 @@ formDisplayStyle="Simple"
 			<obs conceptId="LFHC:1062"/>
 		</p>
 	</fieldset>
+		<fieldset field-separator=", ">
+		<legend>Financial assessment</legend>
+		<h3>Initial financial assessment completed</h3>
+		<p>
+			<obs conceptId="LFHC:1219"/>
+		</p>
+	</fieldset>
 </section>
 
 <section id="nursing-assessment" sectionTag="section" headerStyle="title" headerCode="Nursing Assessment">
@@ -134,6 +141,6 @@ formDisplayStyle="Simple"
 	</fieldset>
 </section>
 
-
 <submit/>
 </htmlform>
+	
