--- a/omod/src/main/webapp/resources/htmlforms/treatment.html
+++ b/omod/src/main/webapp/resources/htmlforms/treatment.html
@@ -11,7 +11,7 @@ formDisplayStyle="Simple"
 	<uiInclude provider="lfhcforms" javascript="toggleContainers.js"/>
 
 	<script type="text/javascript">
-		jQuery(document).ready(function(){
+		$(document).ready(function(){
 			toggleContainers();
 		});
 	</script>
@@ -21,9 +21,46 @@ formDisplayStyle="Simple"
 	<script type="text/javascript" id="handleViewMode">
 
 		// JavaScript for VIEW mode
-		jQuery(document).ready(function(){
+		$(document).ready(function(){
 			handleViewMode("3faa978f-8c89-4f8e-b29f-17fd11099ecf");
 		});
+	</script>
+</ifMode>
+<ifMode mode="enter">
+
+</ifMode>
+
+<ifMode mode="view" include="false">
+	<script type="text/javascript">
+
+		$(document).ready(function () {
+
+			$(".bolus").each(function (index, currentBolus) {
+				$(currentBolus).trigger("change");
+				})
+			$(".bolus-amount").hide();
+			$(".bolus-default").show();
+			$(".bolus").change(function () {
+				// retrieve the numeric prefix in order to toggle the correct section
+				var prefix = parseFloat($(this).attr("id"));
+				if ($(this).is(':checked')) {
+					var bolusAmount = getValue(prefix+"-bolus-no-amount.value");
+					setValue(prefix+"-bolus-no-amount.value", "");
+					setValue(prefix+"-bolus-yes-amount.value", bolusAmount);
+					$("#"+prefix+"-bolus-no").hide();
+					$("#"+prefix+"-bolus-yes").show();
+				}
+				else {
+					var noBolusAmount = getValue(prefix+"-bolus-yes-amount.value");
+					setValue(prefix+"-bolus-yes-amount.value", "");
+					setValue(prefix+"-bolus-no-amount.value", noBolusAmount);
+
+					$("#"+prefix+"-bolus-no").show();
+					setValue(prefix+"-bolus-yes-amount.value", "");
+					$("#"+prefix+"-bolus-yes").hide();
+				}
+			});
+		})
 	</script>
 </ifMode>
 
@@ -35,7 +72,7 @@ formDisplayStyle="Simple"
 	&lt;script type=&quot;text/javascript&quot;>
 	var alertMessage = '${alertMessage}';
 	var successMessage = '${successMessage}';
-	jQuery(document).ready(function(){
+	$(document).ready(function(){
 	var visitEndDate = new Date('${visit.stopDatetime}');
 	if ( Object.prototype.toString.call(visitEndDate) === '[object Date]' ) {
 	if (!( isNaN( visitEndDate.getTime() ) )) {  
@@ -230,7 +267,7 @@ formDisplayStyle="Simple"
 
 	</fieldset>
 
-	<fieldset field-separator=", ">
+	<fieldset>
 
 		<legend>IV fluids order</legend>
 		<h3>Intravenous fluids order</h3>
@@ -238,20 +275,31 @@ formDisplayStyle="Simple"
 		<repeat>
 			<template>
 				<div id="{n}-toggleContainer" templateBlockId="ivs" class="toggleContainer" style="display:none;" >
-					<obsgroup groupingConceptId="LFHC:1055">
-						<p>
-							<obs id="{n}" conceptId="LFHC:1054" answerConceptIds="LFHC:1205,CIEL:80804,LFHC:1206,CIEL:78617,LFHC:1207,CIEL:161922"/>
-						</p>
-						<p>
-							<span class="questionLabel">Rate of IV fluid per hour: </span>
-							<obs conceptId="CIEL:162745"  showUnits="true"/>
-						</p>
-						<p>
-							<i class="addEntry icon-">&#xf055; Add</i>
-							<i class="removeEntry icon-">   &#xf056; Remove</i>
-						</p>
-
-					</obsgroup>
+					<div class="order">
+						<obsgroup groupingConceptId="LFHC:1055">
+							<p>
+								<obs id="{n}" conceptId="LFHC:1054" answerConceptIds="LFHC:1205,CIEL:80804,LFHC:1206,CIEL:78617,LFHC:1207,CIEL:161922"/>
+							</p>
+							<p class="bolus-default bolus-amount" id="{n}-bolus-no">
+								<span class="questionLabel">Rate of IV fluid: </span>
+								<obs id="{n}-bolus-no-amount" conceptId="CIEL:162745" showUnits="true"/>
+							</p>
+							<p class="bolus-amount" id="{n}-bolus-yes">
+								<span class="questionLabel">Amount of IV fluid: </span>
+								<obs id="{n}-bolus-yes-amount" conceptId="LFHC:1273" showUnits="true"/>
+							</p>
+							<ifMode mode="view" include="false">
+								<p>
+									<input type="checkbox" class="bolus" id="{n}-bolus" name="bolus" value="true"/>
+									Bolus
+								</p>
+							</ifMode>
+						</obsgroup>
+					</div>
+					<p>
+						<i class="addEntry icon-">&#xf055; Add</i>
+						<i class="removeEntry icon-">   &#xf056; Remove</i>
+					</p>
 				</div>
 			</template>
 			<render n="501"/>
@@ -263,11 +311,8 @@ formDisplayStyle="Simple"
 			<render n="507"/>
 			<render n="508"/>
 			<render n="509"/>
-
 		</repeat>
-
 	</fieldset>
-
 
 	<fieldset field-separator=", ">
 
